Change to pom config to keep maven happy with regard to library imports

--- a/elements-harvester/pom.xml
+++ b/elements-harvester/pom.xml
@@ -244,6 +244,12 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.5.2</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>httpcore</artifactId>
+                    <groupId>org.apache.httpcomponents</groupId>
+                </exclusion>
+            </exclusions>
 		</dependency>
 
         <!-- junit for unit test-->
