Install folder reorganisation (moving various examples all under one directory), mostly handled in assembly.xml Changes to init scripts to account for example folder changes. Update of main elementsfetch.sh script to  use "flock" internally, and make it log to "logs/harvests_run.log" accounting for HARVEST_ORIGIN. Addition examples for cron, apache-proxy, and web-interface along with README documentation. Addition of list of third party dependencies and licences. Tidy up of packaging process to grant better default file permissions.

--- a/elements-harvester/pom.xml
+++ b/elements-harvester/pom.xml
@@ -81,14 +81,31 @@
                 <!--</executions>-->
             <!--</plugin>-->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.1</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>1.20</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>add-third-party</goal>
+                        </goals>
+                    </execution>
+                </executions>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+                    <outputDirectory>../dependencies</outputDirectory>
+                    <thirdPartyFilename>ListOfDependenciesAndLicences.txt</thirdPartyFilename>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.1</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.2.1</version>
