--- a/elements-harvester/example-integrations/apache-proxy/vivo_ssl_with_web_interface.conf
+++ b/elements-harvester/example-integrations/apache-proxy/vivo_ssl_with_web_interface.conf
@@ -61,7 +61,7 @@ SSLHonorCipherOrder on
 #   certificate chain for the server certificate. Alternatively
 #   the referenced file can be the same as SSLCertificateFile
 #   when the CA certificates are directly appended to the server
-#   certificate for convinience.
+#   certificate for convenience.
 #SSLCertificateChainFile /etc/pki/tls/certs/server-chain.crt
 
 #   Certificate Authority (CA):
