Batch of changes to reduce number of "errors/warnings" listed by IntelliJ
90%+ are changes to :
    Fix spelling inconsistencies;
    Improve Javadoc and general commenting and standardise/improve confusing method and variable names;
    Reduce the "privacy level of classes/methods/fields where possible and appropriate (e.g. public-> package or private);
There is also work to : Remove unused/redundant code and imports and simplify some boolean expressions (automated changes)

There are some manual changes too:
    Removal of "throw" statements in "finally blocks in ElementsAPI, TranslationServiceImpl, FragmentLoader, StateManagement & ElementsStoredItemInfo
    Removal of redundant unboxing code in ElementsGroupCollection & ConfigParser
    Inversion of IsFullyPopulated = IsNotFullyPopulated in ElementsUserInfo
    Minor bugfix (actually in unused code) in ImageUtils
    Improved error handling (again actually in unused code) in HttpClient
    Improved logic for attribute extraction in XMLEventProcessor.WrappedXmlEvent
    Addition of "description" field to ElementsGroupInfo as well as extractor code to populate it.
    Default implementation of GroupInclusionFilter.includeGroup (again in unused code)

--- a/elements-harvester/src/main/resources/elementsfetch.properties
+++ b/elements-harvester/src/main/resources/elementsfetch.properties
@@ -48,7 +48,7 @@
 # you can also "excise" groups which will both remove the group and additionally remove any evidence of user's memberships of those groups
 #paramGroups = 1, 52
     #includeChildGroupsOf = 14,34
-#paramGroupRegexes = "dEpartment.+"
+#paramGroupRegexes = "department.+"
     #includeChildGroupRegexes = "department.+"
 #excludeGroups = 11
     # excludeChildGroupsOf = 15
