Changes to improve "configuration" settings, addition of "aliasses", better logging of "source" of data (main key, alias or default value), etc. Addition of aliases to various keys to allow correction of spelling of key-names whilst allowing old config files to still function. Minor bugfix on "category parsing" (queryObjects) to ensure errors are logged in "configErrors" framework.

--- a/elements-harvester/src/main/resources/elementsfetch.properties
+++ b/elements-harvester/src/main/resources/elementsfetch.properties
@@ -81,10 +81,10 @@
 
 #You can optionally restrict the set of users sent to vivo based on a label scheme or a generic field from Elements
 #valid values for type are "label-scheme" and "generic-field", the name must be set as the
-    #elligibilityFilterType = label-scheme
-    #elligibilityFilterName = c-profile-availability
-    #elligibilityFilterInclusionValue = Make_Available
-    #elligibilityFilterExclusionValue = Make_Available
+    #eligibilityFilterType = label-scheme
+    #eligibilityFilterName = c-profile-availability
+    #eligibilityFilterInclusionValue = Make_Available
+    #eligibilityFilterExclusionValue = Make_Available
 
 
 
